--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   border: 1px solid #ccc;
   border-radius: 3px;
 }
+input[type=email] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
 input[type=submit] {
   width: 98%;
   margin-bottom: 20px;
@@ -69,7 +76,7 @@ input[type=submit] {
          <br>
       <br>
                <h><b> Email Address *</b></h><br> 
-                 <input type="text" id="email" name="EMAIL ADDRESS" placeholder="ENTER EMAIL ADDRESS" required>
+                 <input type="email" id="email" name="EMAIL ADDRESS" placeholder="ENTER EMAIL ADDRESS" required>
                  <h1><b>NOTE:</b>You will Receive Notification On This Email you provided.</h1>
 
   <br>
